--- a/TextTempleter/TextTempleter/App.xaml
+++ b/TextTempleter/TextTempleter/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TextTempleter"
-             StartupUri="MainWindow.xaml">
+             xmlns:properties="clr-namespace:TextTempleter.Properties"
+             StartupUri="src/MainWindow.xaml">
     <Application.Resources>
-         
+        <properties:Resources x:Key="resources"/>
     </Application.Resources>
 </Application>
